--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,11 @@ box-shadow: 0px 0px 45px -29px rgba(0,0,0,1);
 /* card */
 /* target */
 #target{
-  background-image: url('/img/gilan.jpg');
-  background-size: cover;
+  background: -webkit-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -moz-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -ms-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: -o-linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+  background: linear-gradient(45deg, #085078 10%, #85d8ce 90%);  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
